Añadido metodo para devolver todas las rutinas filtrando por id de usuario